xci: Updates to releng/osa to make it work on Jenkins
- change OSA_BRANCH to OPENSTACK_BRANCH to be consistent everywhere.
- create opnfv-setup-openstack.yml playbook, getting rid of some components
and copy it to xcimaster to use during the deployment.
- switch to opnfv-setup-openstack.yml from setup-openstack.yml.
- create Jenkins job wrapper to execute osa deploy script.
- disable ansible strict host key checking.
- use sudo -E as needed in order to make env vars set by Jenkins
job and wrapper available to other scripts and to ansible.
- rename jumphost to xcimaster so people do not mix it with actual
jumphost located in Pharos PODs.
- other minor fixes.

Change-Id: I5736fa700c2aa39c598d301bc74450d766b74411
Signed-off-by: Fatih Degirmenci <fatih.degirmenci@ericsson.com>

--- a/openstack-ansible/playbooks/jumphost_configuration.yml
+++ b/openstack-ansible/playbooks/jumphost_configuration.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: jumphost
+- hosts: xcimaster
   remote_user: root
   vars_files:
     - ../var/ubuntu.yml
@@ -13,7 +13,11 @@
     - name: remove the directory
       shell: "rm -rf {{OSA_PATH}} {{OSA_ETC_PATH}}"
     - name: git openstack ansible
-      shell: "git clone {{OSA_URL}} {{OSA_PATH}} -b {{OSA_BRANCH}}"
+      shell: "git clone {{OSA_URL}} {{OSA_PATH}} -b {{OPENSTACK_BRANCH}}"
+    - name: copy opnfv-setup-openstack.yml to /opt/openstack-ansible/playbooks
+      copy:
+        src: ../file/opnfv-setup-openstack.yml
+        dest: "{{OSA_PATH}}/playbooks/opnfv-setup-openstack.yml"
     - name: copy /opt/openstack-ansible/etc/openstack_deploy to /etc/openstack_deploy
       shell: "/bin/cp -rf {{OSA_PATH}}/etc/openstack_deploy {{OSA_ETC_PATH}}"
     - name: bootstrap
@@ -50,4 +54,4 @@
   remote_user: root
   tasks:
     - name: Generate authorized_keys
-      shell: "/bin/cat /jumphost/root/.ssh/id_rsa.pub >> ../file/authorized_keys"
+      shell: "/bin/cat /xcimaster/root/.ssh/id_rsa.pub >> ../file/authorized_keys"
