--- a/xci/playbooks/provision-vm-nodes.yml
+++ b/xci/playbooks/provision-vm-nodes.yml
@@ -15,7 +15,7 @@
   roles:
     # using these roles here ensures that we can reuse this playbook in different context
     - role: remove-folders
-    - { role: clone-repository, project: "opnfv/releng", repo: "{{ OPNFV_RELENG_GIT_URL }}", dest: "{{ OPNFV_RELENG_PATH }}", version: "{{ OPNFV_RELENG_VERSION }}" }
+    - { role: clone-repository, project: "opnfv/releng-xci", repo: "{{ OPNFV_RELENG_GIT_URL }}", dest: "{{ OPNFV_RELENG_PATH }}", version: "{{ OPNFV_RELENG_VERSION }}" }
     - { role: clone-repository, project: "opnfv/bifrost", repo: "{{ OPENSTACK_BIFROST_GIT_URL }}", dest: "{{ OPENSTACK_BIFROST_PATH }}", version: "{{ OPENSTACK_BIFROST_VERSION }}" }
 
 - hosts: localhost
@@ -34,7 +34,7 @@
         delete: yes
       when:
         - OPENSTACK_BIFROST_DEV_PATH != ""
-    - name: Synchronize local development releng repository to XCI paths
+    - name: Synchronize local development releng-xci repository to XCI paths
       synchronize:
         src: "{{ OPNFV_RELENG_DEV_PATH }}"
         dest: "{{ OPNFV_RELENG_PATH }}"
@@ -42,12 +42,12 @@
         delete: yes
       when:
         - OPNFV_RELENG_DEV_PATH != ""
-    - name: Copy extra vars to releng and bifrost
+    - name: Copy extra vars to releng-xci and bifrost
       synchronize:
         src: "{{ XCI_EXTRA_VARS_PATH }}"
         dest: "{{ item }}"
       with_items:
-        - "{{ OPNFV_RELENG_PATH }}/prototypes/xci/playbooks"
+        - "{{ OPNFV_RELENG_PATH }}/xci/playbooks"
         - "{{ OPENSTACK_BIFROST_PATH }}/playbooks/inventory"
       when:
         - XCI_EXTRA_VARS_PATH != ""
@@ -59,9 +59,9 @@
     - ../var/{{ ansible_os_family }}.yml
     - ../var/opnfv.yml
   tasks:
-    - name: combine opnfv/releng and openstack/bifrost scripts/playbooks
+    - name: combine opnfv/releng-xci and openstack/bifrost scripts/playbooks
       copy:
-        src: "{{ OPNFV_RELENG_PATH }}/prototypes/bifrost/"
+        src: "{{ OPNFV_RELENG_PATH }}/bifrost/"
         dest: "{{ OPENSTACK_BIFROST_PATH }}"
 
 - hosts: localhost
