--- a/xci/var/opnfv.yml
+++ b/xci/var/opnfv.yml
@@ -32,6 +32,7 @@ OPNFV_HOST_IP: "{{ lookup('env','OPNFV_HOST_IP') }}"
 OPNFV_SSH_HOST_KEYS_PATH: "{{ lookup('env', 'OPNFV_SSH_HOST_KEYS_PATH') }}"
 XCI_EXTRA_VARS_PATH: "{{ lookup('env', 'XCI_EXTRA_VARS_PATH') }}"
 XCI_SSL_SUBJECT: "{{ lookup('env', 'XCI_SSL_SUBJECT') }}"
+OPNFV_SCENARIO: "{{ lookup('env','OPNFV_SCENARIO') }}"
 
 # install docker on opnfv host only if we are running as part of CI
 opnfv_required_packages:
