--- a/xci/file/ha/user_variables.yml
+++ b/xci/file/ha/user_variables.yml
@@ -26,3 +26,41 @@ haproxy_keepalived_internal_vip_cidr: "172.29.236.222/32"
 haproxy_keepalived_external_interface: br-vlan
 haproxy_keepalived_internal_interface: br-mgmt
 gnocchi_db_sync_options: ""
+
+{% if XCI_DEPLOY_OPTION == 'sdn' %}
+# Use OpenDaylight SDN Controller
+neutron_plugin_type: "ml2.opendaylight"
+neutron_opendaylight_conf_ini_overrides:
+  ml2_odl:
+    username: "admin"
+    password: "admin"
+    port_binding_controller: "pseudo-agentdb-binding"
+    url: "http://{{ internal_lb_vip_address }}:8080/controller/nb/v2/neutron"
+
+#{%- set ovs_manager_list = [] %}
+#{%- for host in groups["neutron_server_container"]  %}
+#   {% set odl_ip_address =  hostvars[host]['container_address']|string %}
+#   {% set _ = ovs_manager_list."tcp:" + odl_ip_address + ":" + "6640"  %}
+#{% endfor %}
+
+haproxy_extra_services:
+  - service:
+      haproxy_service_name: opendaylight
+      haproxy_backend_nodes: "{{ groups['neutron_server'] | default([]) }}"
+      haproxy_bind: "{{ [internal_lb_vip_address] }}"
+      haproxy_port: 8081
+      haproxy_backend_port: 8181
+      haproxy_balance_type: tcp
+      haproxy_timeout_client: 5000s
+      haproxy_timeout_server: 5000s
+      haproxy_whitelist_networks: "{{ haproxy_galera_whitelist_networks }}"
+  - service:
+      haproxy_service_name: opendaylight-neutron
+      haproxy_backend_nodes: "{{ groups['neutron_server'] | default([]) }}"
+      haproxy_bind: "{{ [internal_lb_vip_address] }}"
+      haproxy_port: 8080
+      haproxy_balance_type: tcp
+      haproxy_timeout_client: 5000s
+      haproxy_timeout_server: 5000s
+      haproxy_whitelist_networks: "{{ haproxy_galera_whitelist_networks }}"
+{% endif %}
