--- a/xci/var/opnfv.yml
+++ b/xci/var/opnfv.yml
@@ -28,3 +28,4 @@ LOG_PATH: "{{ lookup('env','LOG_PATH') }}"
 OPNFV_HOST_IP: "{{ lookup('env','OPNFV_HOST_IP') }}"
 OPNFV_SSH_HOST_KEYS_PATH: "{{ lookup('env', 'OPNFV_SSH_HOST_KEYS_PATH') }}"
 XCI_EXTRA_VARS_PATH: "{{ lookup('env', 'XCI_EXTRA_VARS_PATH') }}"
+XCI_DEPLOY_OPTION: "{{ lookup('env','XCI_DEPLOY_OPTION') }}"
