--- a/xci/playbooks/configure-opnfvhost.yml
+++ b/xci/playbooks/configure-opnfvhost.yml
@@ -71,6 +71,12 @@
       shell: "/bin/cp -rf {{XCI_FLAVOR_ANSIBLE_FILE_PATH}}/openstack_user_config.yml {{OPENSTACK_OSA_ETC_PATH}}"
     - name: copy user_variables.yml
       shell: "/bin/cp -rf {{XCI_FLAVOR_ANSIBLE_FILE_PATH}}/user_variables.yml {{OPENSTACK_OSA_ETC_PATH}}"
+      when:
+        - XCI_DEPLOY_OPTION == "nosdn"
+    - name: copy opendaylight specific user_variables.yml
+      shell: "/bin/cp -rf {{XCI_FLAVOR_ANSIBLE_FILE_PATH}}/odl/user_variables.yml {{OPENSTACK_OSA_ETC_PATH}}"
+      when:
+        - XCI_DEPLOY_OPTION == "sdn"
     - name: copy cinder.yml
       shell: "/bin/cp -rf {{OPNFV_RELENG_PATH}}/prototypes/xci/file/cinder.yml {{OPENSTACK_OSA_ETC_PATH}}/env.d"
     # TODO: We need to get rid of this as soon as the issue is fixed upstream
