support for os-odl-nofeature scenario in XCI
* added new ansible role for os-odl-nofeature support
* added required tasks/files and a-r-r file for os-odl-nofeature
* update README to workaround local dns and ntp sync issues
* increased VM memory footprint to accomodate ODL process

Change-Id: I1355f4beb061caab7315b6f619a96cfaa9f52d2b
Signed-off-by: Periyasamy Palanisamy <periyasamy.palanisamy@ericsson.com>
Signed-off-by: pperiyasamy <periyasamy.palanisamy@ericsson.com>

--- a/xci/playbooks/configure-localhost.yml
+++ b/xci/playbooks/configure-localhost.yml
@@ -25,12 +25,12 @@
   tasks:
     - name: Synchronize local development releng-xci repository to XCI paths
       synchronize:
-        src: "{{ OPNFV_RELENG_DEV_PATH }}"
+        src: "{{ OPNFV_RELENG_XCI_DEV_PATH }}"
         dest: "{{ OPNFV_RELENG_PATH }}"
         recursive: yes
         delete: yes
       when:
-        - OPNFV_RELENG_DEV_PATH != ""
+        - OPNFV_RELENG_XCI_DEV_PATH != ""
 
 - hosts: localhost
   connection: local
