[WIP] opendaylight integration with xci
* added ansible-opendaylight repo in a-r-r file
* added user_variables.yml files for installing ODL and OVS (borrowed it from https://github.com/jvidalallende/releng/blob/rc5/prototypes/xci/file/mini/user_variables.yml)
* increased VM memory footprint to accomodate ODL process

Change-Id: I1355f4beb061caab7315b6f619a96cfaa9f52d2b
Signed-off-by: Periyasamy Palanisamy <periyasamy.palanisamy@ericsson.com>
Signed-off-by: pperiyasamy <periyasamy.palanisamy@ericsson.com>

--- a/xci/playbooks/configure-opnfvhost.yml
+++ b/xci/playbooks/configure-opnfvhost.yml
@@ -100,6 +100,7 @@
         chdir: "{{OPENSTACK_OSA_PATH}}/scripts"
   roles:
     - { role: "os-odl-sfc", when: "OPNFV_SCENARIO == 'os-odl-sfc'" }
+    - { role: "os-odl-nofeature", when: "OPNFV_SCENARIO == 'os-odl-nofeature'" }
 
 - hosts: localhost
   remote_user: root
