--- a/xci/playbooks/roles/os-odl-sfc/files/setup-openstack.yml
+++ b/xci/playbooks/roles/os-odl-sfc/files/setup-openstack.yml
@@ -21,4 +21,6 @@
 - include: os-heat-install.yml
 - include: os-horizon-install.yml
 - include: os-swift-install.yml
+- include: os-tacker-install.yml
 - include: os-ironic-install.yml
+- include: os-tempest-install.yml
