--- a/xci/file/ha/openstack_user_config.yml
+++ b/xci/file/ha/openstack_user_config.yml
@@ -191,6 +191,15 @@ dashboard_hosts:
   controller02:
     ip: 172.29.236.13
 
+# tacker
+mano_hosts:
+  controller00:
+    ip: 172.29.236.11
+  controller01:
+    ip: 172.29.236.12
+  controller02:
+    ip: 172.29.236.13
+
 # neutron server, agents (L3, etc)
 network_hosts:
   controller00:
