Tacker support (stable/ocata)
Tacker is supported upstream https://review.openstack.org/#/c/485259/

This patch adds support of tacker in xci

Change-Id: I1f4214eabf8d82ced32fa3ae3089c48e31b2cd9a
Signed-off-by: Manuel Buil <mbuil@suse.com>

--- a/xci/playbooks/roles/os-odl-sfc/files/setup-openstack.yml
+++ b/xci/playbooks/roles/os-odl-sfc/files/setup-openstack.yml
@@ -21,4 +21,5 @@
 - include: os-heat-install.yml
 - include: os-horizon-install.yml
 - include: os-swift-install.yml
+- include: os-tacker-install.yml
 - include: os-ironic-install.yml
