--- a/xci/playbooks/roles/os-odl-sfc/files/setup-openstack.yml
+++ b/xci/playbooks/roles/os-odl-sfc/files/setup-openstack.yml
@@ -23,3 +23,4 @@
 - include: os-swift-install.yml
 - include: os-tacker-install.yml
 - include: os-ironic-install.yml
+- include: os-tempest-install.yml
