--- a/xci/playbooks/roles/os-odl-sfc/files/tacker.yml
+++ b/xci/playbooks/roles/os-odl-sfc/files/tacker.yml
@@ -1,5 +1,5 @@
 ---
-# Copyright 2014, Rackspace US, Inc.
+# Copyright 2017, SUSE Linux GmbH
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -13,14 +13,24 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-- include: os-keystone-install.yml
-- include: os-glance-install.yml
-- include: os-cinder-install.yml
-- include: os-nova-install.yml
-- include: os-neutron-install.yml
-- include: os-heat-install.yml
-- include: os-horizon-install.yml
-- include: os-swift-install.yml
-- include: os-tacker-install.yml
-- include: os-ironic-install.yml
-- include: os-tempest-install.yml
+component_skel:
+  tacker_server:
+    belongs_to:
+      - tacker_all
+
+
+container_skel:
+  tacker_container:
+    belongs_to:
+      - mano_containers
+    contains:
+      - tacker_server
+
+
+physical_skel:
+  mano_containers:
+    belongs_to:
+    - all_containers
+  mano_hosts:
+    belongs_to:
+    - hosts
