WIP - Provide support for ODL-SFC in xci
This patch adds support for:
- ODL
- OVS+NSH
- SFC

We must wait for:
- https://review.openstack.org/#/c/485259/
- https://review.openstack.org/#/c/480131/

Change-Id: Ic5a89a391d0990d287fbcd6958aa38fe8b097d22
Signed-off-by: Manuel Buil <mbuil@suse.com>

--- a/xci/playbooks/configure-opnfvhost.yml
+++ b/xci/playbooks/configure-opnfvhost.yml
@@ -98,6 +98,9 @@
       command: "python pw-token-gen.py --file {{OPENSTACK_OSA_ETC_PATH}}/user_secrets.yml"
       args:
         chdir: "{{OPENSTACK_OSA_PATH}}/scripts"
+  roles:
+    - { role: "os-odl-sfc", when: "OPNFV_SCENARIO == 'os-odl-sfc'" }
+
 - hosts: localhost
   remote_user: root
   vars_files:
