--- a/xci/playbooks/configure-opnfvhost.yml
+++ b/xci/playbooks/configure-opnfvhost.yml
@@ -98,6 +98,10 @@
       command: "python pw-token-gen.py --file {{OPENSTACK_OSA_ETC_PATH}}/user_secrets.yml"
       args:
         chdir: "{{OPENSTACK_OSA_PATH}}/scripts"
+  roles:
+    - role: "os-odl-sfc"
+  when: OPNFV_SCENARIO == 'os-odl-sfc'
+
 - hosts: localhost
   remote_user: root
   vars_files:
