Developped SFC ansible role
This patch adds a new role which represents the os-odl-sfc scenarios. Besides,
it adds needed files for OSA to support the SFC deployments. These files are
not yet upstreamed in OSA.

Change-Id: Ic5a89a391d0990d287fbcd6958aa38fe8b097d22
Signed-off-by: Manuel Buil <mbuil@suse.com>

--- a/xci/playbooks/configure-opnfvhost.yml
+++ b/xci/playbooks/configure-opnfvhost.yml
@@ -98,6 +98,16 @@
       command: "python pw-token-gen.py --file {{OPENSTACK_OSA_ETC_PATH}}/user_secrets.yml"
       args:
         chdir: "{{OPENSTACK_OSA_PATH}}/scripts"
+
+- hosts: opnfv
+  remote_user: root
+  vars_files:
+    - ../var/{{ ansible_os_family }}.yml
+    - ../var/flavor-vars.yml
+    - ../var/opnfv.yml
+  roles:
+   - { role: "os-odl-sfc", when: "OPNFV_SCENARIO == 'os-odl-sfc'" }
+
 - hosts: localhost
   remote_user: root
   vars_files:
