--- a/xci/playbooks/configure-localhost.yml
+++ b/xci/playbooks/configure-localhost.yml
@@ -14,7 +14,7 @@
     - ../var/opnfv.yml
   roles:
     - role: remove-folders
-    - { role: clone-repository, project: "opnfv/releng-xci", repo: "{{ OPNFV_RELENG_GIT_URL }}", dest: "{{ OPNFV_RELENG_PATH }}", version: "{{ OPNFV_RELENG_VERSION }}" }
+    - { role: clone-repository, project: "opnfv/releng-xci", repo: "{{ OPNFV_RELENG_XCI_GIT_URL }}", dest: "{{ OPNFV_RELENG_XCI_PATH }}", version: "{{ OPNFV_RELENG_XCI_VERSION }}" }
 
 - hosts: localhost
   connection: local
@@ -25,12 +25,12 @@
   tasks:
     - name: Synchronize local development releng-xci repository to XCI paths
       synchronize:
-        src: "{{ OPNFV_RELENG_DEV_PATH }}"
-        dest: "{{ OPNFV_RELENG_PATH }}"
+        src: "{{ OPNFV_RELENG_XCI_DEV_PATH }}"
+        dest: "{{ OPNFV_RELENG_XCI_PATH }}"
         recursive: yes
         delete: yes
       when:
-        - OPNFV_RELENG_DEV_PATH != ""
+        - OPNFV_RELENG_XCI_DEV_PATH != ""
 
 - hosts: localhost
   connection: local
@@ -47,13 +47,13 @@
     - name: copy aio playbook
       copy:
         src: "{{XCI_FLAVOR_ANSIBLE_FILE_PATH}}/configure-opnfvhost.yml"
-        dest: "{{OPNFV_RELENG_PATH}}/xci/playbooks"
+        dest: "{{OPNFV_RELENG_XCI_PATH}}/xci/playbooks"
       when: XCI_FLAVOR == "aio"
     - name: copy flavor inventory
       copy:
         src: "{{XCI_FLAVOR_ANSIBLE_FILE_PATH}}/inventory"
-        dest: "{{OPNFV_RELENG_PATH}}/xci/playbooks"
+        dest: "{{OPNFV_RELENG_XCI_PATH}}/xci/playbooks"
     - name: copy flavor vars
       copy:
         src: "{{XCI_FLAVOR_ANSIBLE_FILE_PATH}}/flavor-vars.yml"
-        dest: "{{OPNFV_RELENG_PATH}}/xci/var"
+        dest: "{{OPNFV_RELENG_XCI_PATH}}/xci/var"
