--- a/xci/playbooks/provision-vm-nodes.yml
+++ b/xci/playbooks/provision-vm-nodes.yml
@@ -15,7 +15,7 @@
   roles:
     # using these roles here ensures that we can reuse this playbook in different context
     - role: remove-folders
-    - { role: clone-repository, project: "opnfv/releng-xci", repo: "{{ OPNFV_RELENG_GIT_URL }}", dest: "{{ OPNFV_RELENG_PATH }}", version: "{{ OPNFV_RELENG_VERSION }}" }
+    - { role: clone-repository, project: "opnfv/releng-xci", repo: "{{ OPNFV_RELENG_XCI_GIT_URL }}", dest: "{{ OPNFV_RELENG_XCI_PATH }}", version: "{{ OPNFV_RELENG_XCI_VERSION }}" }
     - { role: clone-repository, project: "opnfv/bifrost", repo: "{{ OPENSTACK_BIFROST_GIT_URL }}", dest: "{{ OPENSTACK_BIFROST_PATH }}", version: "{{ OPENSTACK_BIFROST_VERSION }}" }
 
 - hosts: localhost
@@ -36,18 +36,18 @@
         - OPENSTACK_BIFROST_DEV_PATH != ""
     - name: Synchronize local development releng-xci repository to XCI paths
       synchronize:
-        src: "{{ OPNFV_RELENG_DEV_PATH }}"
-        dest: "{{ OPNFV_RELENG_PATH }}"
+        src: "{{ OPNFV_RELENG_XCI_DEV_PATH }}"
+        dest: "{{ OPNFV_RELENG_XCI_PATH }}"
         recursive: yes
         delete: yes
       when:
-        - OPNFV_RELENG_DEV_PATH != ""
+        - OPNFV_RELENG_XCI_DEV_PATH != ""
     - name: Copy extra vars to releng-xci and bifrost
       synchronize:
         src: "{{ XCI_EXTRA_VARS_PATH }}"
         dest: "{{ item }}"
       with_items:
-        - "{{ OPNFV_RELENG_PATH }}/xci/playbooks"
+        - "{{ OPNFV_RELENG_XCI_PATH }}/xci/playbooks"
         - "{{ OPENSTACK_BIFROST_PATH }}/playbooks/inventory"
       when:
         - XCI_EXTRA_VARS_PATH != ""
@@ -61,7 +61,7 @@
   tasks:
     - name: combine opnfv/releng-xci and openstack/bifrost scripts/playbooks
       copy:
-        src: "{{ OPNFV_RELENG_PATH }}/bifrost/"
+        src: "{{ OPNFV_RELENG_XCI_PATH }}/bifrost/"
         dest: "{{ OPENSTACK_BIFROST_PATH }}"
 
 - hosts: localhost
