--- a/xci/var/opnfv.yml
+++ b/xci/var/opnfv.yml
@@ -7,10 +7,10 @@
 # which accompanies this distribution, and is available at
 # http://www.apache.org/licenses/LICENSE-2.0
 ##############################################################################
-OPNFV_RELENG_GIT_URL: "{{ lookup('env','OPNFV_RELENG_GIT_URL') }}"
-OPNFV_RELENG_PATH: "{{ lookup('env','OPNFV_RELENG_PATH') }}"
-OPNFV_RELENG_DEV_PATH: "{{ lookup('env','OPNFV_RELENG_DEV_PATH') }}"
-OPNFV_RELENG_VERSION: "{{ lookup('env','OPNFV_RELENG_VERSION') }}"
+OPNFV_RELENG_XCI_GIT_URL: "{{ lookup('env','OPNFV_RELENG_XCI_GIT_URL') }}"
+OPNFV_RELENG_XCI_PATH: "{{ lookup('env','OPNFV_RELENG_XCI_PATH') }}"
+OPNFV_RELENG_XCI_DEV_PATH: "{{ lookup('env','OPNFV_RELENG_XCI_DEV_PATH') }}"
+OPNFV_RELENG_XCI_VERSION: "{{ lookup('env','OPNFV_RELENG_XCI_VERSION') }}"
 OPENSTACK_BIFROST_GIT_URL: "{{ lookup('env','OPENSTACK_BIFROST_GIT_URL') }}"
 OPENSTACK_BIFROST_PATH: "{{ lookup('env','OPENSTACK_BIFROST_PATH') }}"
 OPENSTACK_BIFROST_DEV_PATH: "{{ lookup('env','OPENSTACK_BIFROST_DEV_PATH') }}"
