install chrony and nfs
when deploying ha scenario, the packages of chrony and nfs is necessary

Change-Id: I9b1f580edd687214b96c0764204b936cbf05c391
Signed-off-by: wutianwei <wutianwei1@huawei.com>

--- a/xci/playbooks/roles/configure-nfs/tasks/main.yml
+++ b/xci/playbooks/roles/configure-nfs/tasks/main.yml
@@ -9,6 +9,11 @@
 ##############################################################################
 # TODO: this is for xenial and needs to be adjusted for different distros
 - block:
+    - name: Install apt packages
+      apt:
+        pkg: "nfs-kernel-server"
+        state: "present"
+        update_cache: "yes"
     - name: make NFS directories
       file:
         dest: "{{ item }}"
