xci: playbooks: configure-network: Prepare for multi-distro support
Move the network templates inside the role since it's their only user.
Moreover, remove the arguments when we include the role in playbooks and
move the distro logic to the role itself.

Change-Id: I938686fdb31b9896b9e97339799a0edd4c34bf36
Signed-off-by: Markos Chandras <mchandras@suse.de>

--- a/xci/playbooks/configure-targethosts.yml
+++ b/xci/playbooks/configure-targethosts.yml
@@ -13,8 +13,7 @@
     - ../var/{{ ansible_os_family }}.yml
     - ../var/flavor-vars.yml
   roles:
-    # TODO: this only works for ubuntu/xenial and need to be adjusted for other distros
-    - { role: configure-network, src: "../template/controller.interface.j2", dest: "/etc/network/interfaces" }
+    - role: configure-network
     # we need to force sync time with ntp or the nodes will be out of sync timewise
     - role: synchronize-time
 
@@ -24,8 +23,7 @@
     - ../var/{{ ansible_os_family }}.yml
     - ../var/flavor-vars.yml
   roles:
-    # TODO: this only works for ubuntu/xenial and need to be adjusted for other distros
-    - { role: configure-network, src: "../template/compute.interface.j2", dest: "/etc/network/interfaces" }
+    - role: configure-network
     # we need to force sync time with ntp or the nodes will be out of sync timewise
     - role: synchronize-time
 
